--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@
 }
 
 @plugin "daisyui/theme" {
-  name: "light";
+  name: "dark";
   default: true;
   --color-primary: #caeb66;
   --color-secondary: teal;
